
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Jan-28 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
	- Better criteria to find starting poind in zone filling: the filling alg. uses
	pads, vias and track ends to find where start the filling.
	- Added a tool + option in popup menu in track mode (select track width):
	when creating a track, if activated: if we starts on an existing track,
	the new track takes the width of the existing track


2008-Jan-27 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+all:
    I got a patch from Mr. Wayne Stambaugh which makes it possible to compile
    infospgm.cpp once and link the same *.o file multiple times.   
    Jean-Pierre, if you not yet using CMake, you should edit your make.include
    so that infospgm.cpp is only compiled once for everything, not once per
    program.  Wayne is a competent developer who contacted me about contributing.
    I consider him a welcome addition to the developers, Dick.


2008-Jan-25 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew:
  * SPECCTRA export does padstacks ok, except that oval pad's arcs need to be split
    into quarter circle arcs, and no consideration is given to "layer types".
    See page bottom of page 74 of the SECCTRA Design Language Reference, May 2000.
  * HISTORY_NUMBER was spelt with a zero.
  * Width was spelt as Widht
    

2008-Jan-25 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    - void Change_Side_Module( MODULE* Module, wxDC* DC ) is now member of class BOARD.
