@@ -5,6 +5,13 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Jan-29 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++pcbnew:
+  SPECCTRA export does most items now, except existing tracks.  Soon will
+  need testing.
+
+
 2008-Jan-28 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +pcbnew:
